Jump Title Fix

--- a/css/jump.theme.default.css
+++ b/css/jump.theme.default.css
@@ -34,7 +34,7 @@ a:hover {
 #brand-logo {
 	
 	position:relative;
-	left:-4%;
+	left:-3%;
 	
 }
 
